--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Maroc-Regarder des séries TV en ligne, Regarder des films en ligne</title>
     <!-- <a href="https://iconscout.com/icons/netflix" target="_blank">Netflix Logo Flat  Logo Icon</a> by <a href="https://iconscout.com/contributors/pixel-icons">Pixel Icons</a> on <a href="https://iconscout.com">Iconscout</a> -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="icon" href="./img/netflix-logo.svg">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -62,7 +63,7 @@
     <!-- end header -->
     <div class="ligne"></div>
 
-    <div class="card-1">
+    <div class="card-1" data-aos="fade-left" data-aos-duration="3000">
         <div class="desc-1">
             <h1>
                 Regardez Netflix sur votre TV.
@@ -80,7 +81,7 @@
     </div>
     <div class="ligne"></div>
 
-    <div class="card-0">
+    <div class="card-0" data-aos="fade-right" data-aos-duration="3000">
         <img src="img/mobile-0819.jpg" alt="Netflix TV" class="hideSmall">
 
         <div class="desc-0">
@@ -112,7 +113,7 @@
     <div class="ligne"></div>
 
 
-    <div class="card-3">
+    <div class="card-3" data-aos="fade-left" data-aos-duration="3000">
         <div class="desc-3">
             <h1>
                 Regardez Netflix sur votre TV.
@@ -129,7 +130,7 @@
     </div>
     <div class="ligne"></div>
 
-    <div class="card-2">
+    <div class="card-2" data-aos="fade-right" data-aos-duration="3000">
         <img src="img/jeunesse.png" alt="Netflix TV" style="padding-left: 80px;" class="hideSmall">
 
         <div class="desc-2">
@@ -148,7 +149,7 @@
     <div class="ligne"></div>
 
     <div class="container">
-        <div class="question">
+        <div class="question" data-aos="fade-down" data-aos-duration="3000">
             <h1>Foire aux questions</h1>
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
@@ -265,57 +266,62 @@
     </div>
     <div class="ligne"></div>
     <footer>
-        <p><a href="#">Des questions ? Contactez-nous</a></p>
-        <div class="list big">
-            <ul>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#"> Relations Investisseurs</a> </li>
-                <li><a href="#">Confidentialité</a></li>
-                <li><a href="#">Test de vitesse</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Centre d'aide</a></li>
-                <li><a href="#"> Recrutement</a> </li>
-                <li><a href="#">Préférences de cookies</a></li>
-                <li><a href="#">Informations légales</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Compte</a></li>
-                <li><a href="#"> Modes de lecture</a> </li>
-                <li><a href="#">Mentions légales</a></li>
-                <li><a href="#">Seulement sur Netflix</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Presse</a></li>
-                <li><a href="#">Conditions d'utilisation</a> </li>
-                <li><a href="#">Nous contacter</a></li>
-            </ul>
-        </div>
-        <div class="list small">
-            <ul>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#"> Compte</a> </li>
-                <li><a href="#">Relations Investisseurs</a></li>
-                <li><a href="#">Modes de lecture</a></li>
+        <div data-aos="fade-up" data-aos-duration="3000">
+            <p><a href="#">Des questions ? Contactez-nous</a></p>
+            <div class="list big">
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#"> Relations Investisseurs</a> </li>
+                    <li><a href="#">Confidentialité</a></li>
+                    <li><a href="#">Test de vitesse</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#"> Recrutement</a> </li>
+                    <li><a href="#">Préférences de cookies</a></li>
+                    <li><a href="#">Informations légales</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Compte</a></li>
+                    <li><a href="#"> Modes de lecture</a> </li>
+                    <li><a href="#">Mentions légales</a></li>
+                    <li><a href="#">Seulement sur Netflix</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Presse</a></li>
+                    <li><a href="#">Conditions d'utilisation</a> </li>
+                    <li><a href="#">Nous contacter</a></li>
+                </ul>
+            </div>
+            <div class="list small">
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#"> Compte</a> </li>
+                    <li><a href="#">Relations Investisseurs</a></li>
+                    <li><a href="#">Modes de lecture</a></li>
 
-                <li><a href="#">Confidentialité</a></li>
-                <li><a href="#"> Mentions légales</a> </li>
-                <li><a href="#">Test de vitesse</a></li>
-                <li><a href="#">Seulement sur Netflix</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Centre d'aide</a></li>
-                <li><a href="#">Presse</a> </li>
-                <li><a href="#">Recrutement</a></li>
-                <li><a href="#">Conditions d'utilisation</a></li>
+                    <li><a href="#">Confidentialité</a></li>
+                    <li><a href="#"> Mentions légales</a> </li>
+                    <li><a href="#">Test de vitesse</a></li>
+                    <li><a href="#">Seulement sur Netflix</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Presse</a> </li>
+                    <li><a href="#">Recrutement</a></li>
+                    <li><a href="#">Conditions d'utilisation</a></li>
 
-                <li><a href="#">Préférences de cookies</a></li>
-                <li><a href="#">Nous contacter</a> </li>
-                <li><a href="#">Informations légales</a></li>
-            </ul>
+                    <li><a href="#">Préférences de cookies</a></li>
+                    <li><a href="#">Nous contacter</a> </li>
+                    <li><a href="#">Informations légales</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/js.js"></script>
