--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,6 @@
 
     <header>
         <!-- header -->
-
         <div id="header">
             <div class="container">
                 <nav>
@@ -40,7 +39,7 @@
                     </div>
                 </nav>
 
-                <div class="description">
+                <div class="description" data-aos="fade-left" data-aos-duration="3000">
                     <div class="text">
                         <h1>Films, séries TV et bien plus en illimité.</h1>
                         <p class="first">Où que vous soyez. Annulez à tout moment.</p>
